Revert "Sync v0.10.3"